name:                initiative-counter
version:             0.1.1.0
-- synopsis:
-- description:
homepage:            https://github.com/addap/initiative-counter#readme
license:             BSD3
license-file:        LICENSE
author:              Adrian Dapprich
maintainer:          adrian@dapprich.dev
copyright:           2020 Adrian Dapprich
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable initiative-counter
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , initiative-counter
                     , threepenny-gui
                     , safe
                    

library
  hs-source-dirs:      lib
  exposed-modules:     Core
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      